--- a/BOATS-RecipeSharingApp/src/main/webapp/WEB-INF/web.xml
+++ b/BOATS-RecipeSharingApp/src/main/webapp/WEB-INF/web.xml
@@ -3,5 +3,23 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
+
   <display-name>Archetype Created Web Application</display-name>
+
+  <servlet>
+    <servlet-name>AbstractDatabaseServlet</servlet-name>
+    <servlet-class>com.boats.recipe.webapp.servlet.AbstractDatabaseServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>AbstractDatabaseServlet</servlet-name>
+    <url-pattern>/home</url-pattern>
+  </servlet-mapping>
+
+  <resource-ref>
+    <description>Connection pool to the database</description>
+    <res-ref-name>jdbc/boats</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
 </web-app>
