--- a/BOATS-RecipeSharingApp/pom.xml
+++ b/BOATS-RecipeSharingApp/pom.xml
@@ -39,7 +39,11 @@
       <artifactId>log4j-core</artifactId>
       <version>${log4j.version}</version>
     </dependency>
-
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>2.14.0-rc2</version>
+    </dependency>
   </dependencies>
 
   <build>
