--- a/BOATS-RecipeSharingApp/pom.xml
+++ b/BOATS-RecipeSharingApp/pom.xml
@@ -49,5 +49,15 @@
 
   <build>
     <finalName>BOATS-RecipeSharingApp</finalName>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                  <source>11</source>
+                  <target>11</target>
+              </configuration>
+          </plugin>
+      </plugins>
   </build>
 </project>
