userservlet changes added

--- a/BOATS-RecipeSharingApp/pom.xml
+++ b/BOATS-RecipeSharingApp/pom.xml
@@ -45,6 +45,14 @@
       <artifactId>jackson-core</artifactId>
       <version>2.14.0-rc2</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api -->
+    <dependency>
+      <groupId>jakarta.servlet</groupId>
+      <artifactId>jakarta.servlet-api</artifactId>
+      <version>6.1.0-M2</version>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
